--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@fastify/cors": "^11.1.0",
     "@fastify/formbody": "^8.0.2",
     "@fastify/jwt": "^10.0.0",
+    "@fastify/swagger": "^9.5.1",
+    "@fastify/swagger-ui": "^5.2.3",
     "@google-cloud/firestore": "^7.8.0",
     "@google-cloud/secret-manager": "^6.1.0",
     "bcryptjs": "^3.0.2",
@@ -17,7 +19,8 @@
     "fastify": "^5.5.0",
     "fastify-plugin": "^5.0.1",
     "qrcode": "^1.5.4",
-    "speakeasy": "^2.0.0"
+    "speakeasy": "^2.0.0",
+    "yaml": "^2.8.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
