feat: Implement AI query endpoints and financial analysis functionality
- Added AI query endpoints for employees/admins and clients with role-based access control.
- Integrated Google Generative AI and OpenAI for processing AI queries.
- Developed financial analysis endpoint supporting JSON and multipart file uploads.
- Implemented context building for AI queries based on user roles and client IDs.
- Added document generation services for PDF and DOCX outputs of financial insights.
- Configured GitHub Actions workflow for deploying to Google Cloud Run.
- Updated package dependencies to include necessary libraries for AI and document processing.

--- a/package.json
+++ b/package.json
@@ -3,21 +3,28 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "start": "nodemon api/server.js",
+    "start": "node api/server.js",
+    "dev": "nodemon api/server.js",
     "seed-demo": "node scripts/seedDemo.js"
   },
   "dependencies": {
     "@fastify/cors": "^11.1.0",
     "@fastify/formbody": "^8.0.2",
     "@fastify/jwt": "^10.0.0",
+    "@fastify/multipart": "^9.0.3",
     "@fastify/swagger": "^9.5.1",
     "@fastify/swagger-ui": "^5.2.3",
     "@google-cloud/firestore": "^7.8.0",
     "@google-cloud/secret-manager": "^6.1.0",
+    "@google-cloud/storage": "^7.17.0",
+    "@google/generative-ai": "^0.24.1",
     "bcryptjs": "^3.0.2",
+    "docx": "^9.5.1",
     "dotenv": "^16.4.1",
     "fastify": "^5.5.0",
     "fastify-plugin": "^5.0.1",
+    "openai": "^5.16.0",
+    "pdfkit": "^0.17.1",
     "qrcode": "^1.5.4",
     "speakeasy": "^2.0.0",
     "yaml": "^2.8.1"
