--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "start": "node api/server.js",
     "dev": "nodemon api/server.js",
-    "seed-demo": "node scripts/seedDemo.js"
+    "seed-demo": "node scripts/seedDemo.js",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
   },
   "dependencies": {
     "@fastify/cors": "^11.1.0",
@@ -21,15 +23,22 @@
     "bcryptjs": "^3.0.2",
     "docx": "^9.5.1",
     "dotenv": "^16.4.1",
+    "exceljs": "^4.4.0",
     "fastify": "^5.5.0",
     "fastify-plugin": "^5.0.1",
+    "mammoth": "^1.10.0",
     "openai": "^5.16.0",
+    "pdf.js-extract": "^0.2.1",
     "pdfkit": "^0.17.1",
     "qrcode": "^1.5.4",
     "speakeasy": "^2.0.0",
+    "tesseract.js": "^6.0.1",
     "yaml": "^2.8.1"
   },
   "devDependencies": {
+    "@eslint/js": "^9.34.0",
+    "eslint": "^9.34.0",
+    "globals": "^16.3.0",
     "nodemon": "^3.1.10"
   }
 }
