feat: update token expiration to 1 day and add employee management endpoints
- Changed access token expiration from 15 minutes to 1 day in utils.js.
- Added OpenAPI specifications for employee management, including endpoints for listing, retrieving, updating, inviting, and accepting invitations for employees.
- Implemented employee controller methods for handling employee data and invitations.
- Created new routes for employee management and roles management, including role creation, updating, and permissions handling.
- Integrated SendGrid for sending invitation emails to new employees.
- Removed old employee and roles route files and replaced them with new structured routes.

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@google-cloud/secret-manager": "^6.1.0",
     "@google-cloud/storage": "^7.17.0",
     "@google/generative-ai": "^0.24.1",
+    "@sendgrid/mail": "^8.1.5",
     "bcryptjs": "^3.0.2",
     "docx": "^9.5.1",
     "dotenv": "^16.4.1",
